# brows3rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
api/: Cargo.toml
api/crates/browser/src/: main.rs
api/crates/browser_api/: Cargo.toml
api/crates/browser_api/src/: endpoint.rs  lib.rs
api/crates/buckets/: Cargo.toml
api/crates/buckets/src/: lib.rs  s3buckets.rs
api/crates/cli/src/: interactive.rs  lib.rs
api/crates/download_latest/: Cargo.toml
api/crates/download_latest/src/: main.rs
crates/browser/: Cargo.toml
crates/browser/src/: main.rs
crates/buckets/: Cargo.toml
crates/buckets/src/: artifact_node.rs  lib.rs  s3buckets.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: main.rs
crates/find_artifact_with_commit/: Cargo.toml
crates/find_artifact_with_commit/src/: main.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
minio_test/: main.py
src/: brows3r.rs  main.rs
src/buckets/: mod.rs
src_old/: main.rs
