[package]
name = "brows3rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "crates/browser/src/main.rs"
name = "browser"

[[bin]]
path = "crates/downloader/src/main.rs"
name = "downloader"

[[bin]]
path = "crates/download_latest/src/main.rs"
name = "download_latest"

[[bin]]
path = "crates/find_artifact_with_commit/src/main.rs"
name = "find_artifact_with_commit"

[workspace]
members = [
    "crates/browser",
    "crates/buckets", 
    "crates/downloader", 
    "crates/find_artifact_with_commit",
    "crates/browser_api", 
    "crates/download_latest",
]

[dependencies]
buckets = { version = "0.1.0", path = "crates/buckets" }
browser_api = { version = "0.1.0", path = "crates/browser_api" }
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
rust-s3 = "0.33.0"
tokio = {version = "1.36.0", features = ["rt-multi-thread", "macros"]}
