[package]
name = "browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buckets = { version = "0.1.0", path = "../buckets" }
clap = { version = "4.5.4", features = ["derive"] }
tokio = {version = "1.36.0", features = ["rt-multi-thread", "macros"]}
